--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" prefix="og: https://ogp.me/ns#">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>Русская гематрия. Калькулятор. Парный счёт слов, имён и текстов для русского алфавита и латиницы</title>
